force-app/main/default/objects/TempContact__c/TempContact__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Temp Contact</description>
    <label>Temp Contact</label>
    <nameField>
        <label>TempContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>