force-app/main/default/objects/TempContact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales force account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TempContacts</relationshipName>
    <type>Lookup</type>
</CustomField>