force-app/main/default/objects/TempContact__c/fields/Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Status__c</fullName>
    <description>This field will be used for Ops admin in order to approve/reject the Contractor.</description>
    <inlineHelpText>Please Approve/Reject the Contractor hired by Exhibitors.</inlineHelpText>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>