force-app/main/default/objects/TempContact__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Contact Fax</description>
    <label>Fax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>