force-app/main/default/objects/TempContact__c/fields/Is_SubContractors_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_SubContractors_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true then SubContractors is Available</description>
    <label>Is SubContractors Available</label>
    <type>Checkbox</type>
</CustomField>