force-app/main/default/objects/TempContact__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Contact Last Name</description>
    <label>LastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>