force-app/main/default/objects/TempContact__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>MobilePhone</description>
    <label>MobilePhone</label>
    <type>Phone</type>
</CustomField>