force-app/main/default/objects/TempContact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact Phone</description>
    <label>Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>