force-app/main/default/objects/TempContact__c/fields/TempAccount__c.field-meta.xml
<CustomField>
    <fullName>TempAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temp Contractor Account</description>
    <label>TempAccount</label>
    <referenceTo>TempAccount__c</referenceTo>
    <relationshipName>TempContacts</relationshipName>
    <type>Lookup</type>
</CustomField>